added instructions to p tags with some mock style in css

--- a/index.html
+++ b/index.html
@@ -4,11 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>crystal collector</title>
   </head>
   <body>
-
+    <div id="gameName">
+      <h1>crystal Collector!</h1>
+    </div>
+    <div class="instructions">
+      <p>
+        You will be Given a random number at the start of the game.
+        <br />
+        There are four crystals below. By clocking on a crystal you will add a
+        specific amount of points to your total score. <br />
+        You win the game by matching your total score to random number, you lose
+        the game if your total score goes above the random number. <br />
+        The value of each crystal is hidden from you until you click on it.
+        <br />
+        Each time when the game starts, the game will change the values of each
+        crystal.
+      </p>
+    </div>
+    
+    <div class="objective"></div>
+    <div class="crystal"></div>
+    <div class="score"></div>
   </body>
 </html>
