styled first id and class

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="assets/css/reset.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
     <title>crystal collector</title>
   </head>
   <body>
@@ -26,9 +26,9 @@
         crystal.
       </p>
     </div>
-    
-    <div class="objective"></div>
-    <div class="crystal"></div>
-    <div class="score"></div>
+
+    <div id="objective"></div>
+    <div id="crystal"></div>
+    <div id="score"></div>
   </body>
 </html>
