addid crystle images to folder and set up button frame

--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
       </p>
     </div>
 
-    <div id="objective"></div>
-    <div id="crystal"></div>
-    <div id="score"></div>
+    <div class="objective"></div>
+    <div id="crystal">
+        <button class="button"></button>
+    </div>
+    <div id="score">Your total score is:</div>
+    <div class="objective"></div>
   </body>
 </html>
