added buttons a long with images and started a grid

--- a/index.html
+++ b/index.html
@@ -28,9 +28,42 @@
     </div>
 
     <div class="objective"></div>
+    <div class="row"> 
     <div id="crystal">
-        <button class="button"></button>
+        <div class="column">
+      <button class="button">
+        <input
+          type="image"
+          src="../unit-4game/assets/images/crystals purp.jpg"
+        />
     </div>
+    <div class="column">
+      </button>
+      <button class="button">
+        <input
+          type="image"
+          src="../unit-4game/assets/images/crystals yellow.jpg"
+        />
+    </div>
+    <div class="column">
+      </button>
+      <button class="button">
+        <input
+          type="image"
+          src="../unit-4game/assets/images/crystals red.jpg"
+        />
+    </div>
+    <div class="column"> 
+      </button>
+      <button class="button">
+        <input
+          type="image"
+          src="../unit-4game/assets/images/crystals blue.jpg"
+        />
+      </button>
+    </div>
+    </div>
+</div>
     <div id="score">Your total score is:</div>
     <div class="objective"></div>
   </body>
