random number working

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title>crystal collector</title>
   </head>
   <body>
@@ -27,17 +29,18 @@
       </p>
     </div>
 
+    <div class="container">
     <div class="objective"></div>
     <div class="row"> 
     <div id="crystal">
-        <div class="column">
+        <div class="col-3">
       <button class="button">
         <input
           type="image"
-          src="../unit-4game/assets/images/crystals purp.jpg"
+          src="assets/images/crystals purp.jpg"
         />
     </div>
-    <div class="column">
+    <div class="col-3">
       </button>
       <button class="button">
         <input
@@ -45,7 +48,7 @@
           src="../unit-4game/assets/images/crystals yellow.jpg"
         />
     </div>
-    <div class="column">
+    <div class="col-3">
       </button>
       <button class="button">
         <input
@@ -53,7 +56,7 @@
           src="../unit-4game/assets/images/crystals red.jpg"
         />
     </div>
-    <div class="column"> 
+    <div class="col-3"> 
       </button>
       <button class="button">
         <input
@@ -66,5 +69,6 @@
 </div>
     <div id="score">Your total score is:</div>
     <div class="objective"></div>
+</div>
   </body>
 </html>
