added classes to buttons and added functions to increase and display wins and losses

--- a/index.html
+++ b/index.html
@@ -40,22 +40,22 @@
         <div id="crystal">
           <div class="col-3">
             <button class="button">
-              <input type="image" src="assets/images/crystals purp.jpg" />
+              <input type="image" src="assets/images/crystals purp.jpg" class="purp" alt="purple crystal" />
             </button>
           </div>
           <div class="col-3">
             <button class="button">
-              <input type="image" src="assets/images/crystals yellow.jpg" />
+              <input type="image" src="assets/images/crystals yellow.jpg" class="yellow" alt="yellow crystal" />
             </button>
           </div>
           <div class="col-3">
             <button class="button">
-              <input type="image" src="assets/images/crystals red.jpg" />
+              <input type="image" src="assets/images/crystals red.jpg" class="red" alt="red crystal " />
             </button>
           </div>
           <div class="col-3">
             <button class="button">
-              <input type="image" src="assets/images/crystals blue.jpg" />
+              <input type="image" src="assets/images/crystals blue.jpg" class="blue" alt="blue crystal" />
             </button>
           </div>
         </div>
