set click functions and if statments

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
 
     <div id="score">Your total score is:</div>
-    <div class="objective"></div>
+    <div class="objective" id="userPoints"></div>
     <script src="assets/javascript/game.js"></script>
   </body>
 </html>
